css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

@font-face {
    font-family: "alcubierreregular";
    src: url('../fonts/alcubierre-webfont.woff2') format('woff2'),
         url('../fonts/alcubierre-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "alcubierreregular";
  background-color: #bac4b0;
}

*, *::before, *::after {
  box-sizing: inherit;
}


body {
 background-image:  url();
 background-repeat:  no-repeat;
 background-attachment: fixed;
 background-size: contain;

}

h1 {
  font-family: "alcubierreregular", sans-serif;
  font-size: 80px;
  font-weight: 500;
  display: inline-block;
  line-height: normal;
  margin: 1rem;
}

h6 {
  margin-bottom: 0;
  font-size: .8889rem;
}

li {
  margin-left: 10px;
}

.list ul {
  padding-bottom: 3rem;
}

iframe {
  padding-bottom: 1.4rem;
}

.masthead {
  height: 6rem;
  display: block;
  padding: .5rem;
  color: white;
  font-weight: 200;
  font-family: "alcubierreregular";
}

header {
  background-color: #bac4b0;
}

h1 a {
  display: inline-block;
}

/*NAV*/
.nav {
  text-align: right;
  background-color: #bac4b0;
  padding-top: 40px;
}

.nav a:hover {
  color: white;
}

.btn:hover {
  background-color: black;
  color: white;
}

a {
  display: block;
  text-decoration: none;
  color: black;
  cursor: pointer;

}

ul {
  list-style-type: none;
  padding: 0;
  margin-bottom: 0;
}


.logo {
  padding-left: 2rem;
  float: left;
  position: relative;
}


.pieces {
  background-color: #C4CEB9;
}

.portfolio-piece {
  box-shadow: 8px 8px 7px rgba(0,0,0,.2);
}


h2 {
  font-family: "proxima", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 3rem;
  text-align: center;
  line-height: normal;
  margin: 1rem;
  color: #282828;
  padding-top: 2rem;
}

h3 {
  font-family: "alcubierreregular", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 3rem;
  text-align: center;
  line-height: normal;
  margin: 1rem;
  color: #282828;
}

h4 {
  margin: 0;
}

.workbody h3 {
  margin-bottom: 0;

}

.workbody {
  background-color: #C4CEB9;
}

.content {
  text-align: center;
}

.back {
  padding-left: 1.5rem;
  padding-top: 1.5rem;
  color: grey;
}


/*BANNER*/
.welcome {
  font-size: 60px;
}

.picture {
  max-width: 100%;
}

.me {
  width: 50%;
  display: inline-block;
  height: 500px;
  width: 300px;
}

.bannertext {
  display: inline-block;
  text-align: center;
}

.photo {
  opacity: 0.9;
  display: block;
  width: 100%;
}

.text2 {
  display: inline-block;
  text-align: center;
  position: relative;
}

.imagebanner {
  position: absolute;
}

.banner {
  background-color: #C4CEB9;
  display: none;
}

.bannerbg {
  background-color: #C4CEB9;
}

.banner-small {
  overflow: hidden;
  width: 100%;
  display: block;
  background-color: #C4CEB9;
  text-align: center;
  display: block;
  padding: 1em;
  padding-bottom: 3em;
}

.playbanner {
  text-align: center;
}

.content {
  left: 0;
  width: 100%;
  bottom: 30%;
}

.columns{
  column-gap: 60px;
  padding: 30px 0 40px 0;
}

p {
  color: black;
  margin: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.1rem;
}

ul {
  font-size: 14px;
}

.multi p {
  margin-bottom: 1rem;
}

img {
  display: block;
  max-width: 100%;
}

/*Cards*/
.card {
  position: relative;
  transition: all 500ms linear;
  overflow: hidden;
}

.card .content {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.content {
  background-color: rgba(145, 145, 145, .7);
}

.empty{
  height: 60vh;
}

/*FOOTER*/
footer p {
  text-align: left;
  padding-left: 4rem;
  color: #1E1E1E;
}

footer {
  border-top: 1px solid black;
  background-color: #bac4b0;
}

.footer-content {
  padding-top: .2rem;
  padding-bottom: 2rem;
}

.icons {
  padding-top: .3rem;
  padding-right: 4rem;
}

.icon {
padding-left: 2rem;
display: block;
float: right;
}

/*Form*/

.contact {
  background-color: #C4CEB9;
}

.contact-me {
  background-color: #C4CEB9;
  padding-bottom: 3rem;
}

.contact-me h3 {
  padding-bottom: 2rem;
  font-size: 30px;
}

form {
  font-family: 'Lato', sans-serif;
  font-weight: 300;
  width: 80%;
  display: inline-block;
  text-align: left;
}

form input, textarea{
  background-color: transparent;
}

.btn{
  background-color: transparent;
  color: #5b6354;
  border-color: #5b6354;
}

.btn:hover {
  color: black;
  background-color: grey;
  border-color: black;
}

/*404 page*/
.lostpage {
  background-color: #C4CEB9;
  text-align: center;
  display: block;
}

/* lists*/
.lists {
  background-color: #bac4b0;
}

/* Slideshow */
* {box-sizing:border-box}
body {font-family: Verdana,sans-serif;margin:0}
.mySlides {display:none}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
  color: white;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dots {
  padding-bottom: 1rem;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

.slideshow-container {
  box-shadow: 8px 8px 7px rgba(0,0,0,.2);
}



@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
}

@media only screen and (min-width: 15em) {

  .text {
    text-align: left;
  }

/*Footer*/
  footer p {
    text-align: left;
    padding-top: .5rem;
    padding-left: .3rem;
    font-size: 12px;
  }

  .icons {
    padding-top: .3rem;
    padding-right: .3rem;
    text-align: right;
  }

  .contact-me h2 {
  font-size: 30px;
  }

  .grid h3 {
  font-size: 18px;
  }

  form {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .logo {
    max-width: 40%;
  }

  .nav {
    padding-top: 30px;
  }

  .workbody {
    padding: 0px 50px 0px 50px;
  }

}

@media only screen and (min-width: 38em) {

  .card .content {
    position: absolute;
    width: 100%;
    opacity: 0;
    top:0;
    left: 0;
    bottom: 0;
    right: 0;
    transition: all 500ms linear;
    background-color: rgba(145, 145, 145, .7);
  }

  .contact-me h2 {
  font-size: 50px;
  }


  .grid h3 {
  font-size: 60px;
  }

  form {
    padding-left: 5rem;
    padding-right: 5rem;
  }

  .card:hover .content {
    opacity: 1;
  }

  footer p {
    text-align: left;
    padding-left: 3rem;
    padding-top: .3rem;
    font-size: 15px;
  }

  .icons {
    padding-top: .3rem;
    padding-right: 3rem;
    text-align: right;
  }

  .banner {
    display: flex;
  }

  .banner-small {
    display: none;
  }

  .logo {
    max-width: 30%;
  }

  .nav {
    padding-top: 40px;
  }

  .workbody {
    padding: 0px 100px 0px 100px;
  }

  .columns{
    column-count: 1;
  }

}

@media only screen and (min-width: 60em) {

  .nav {
    display: block;
    background-color: #bac4b0;
    padding-top: 50px;
  }

  .nav li {
    display: inline-block;
  }

  .nav a {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .nav-label {
    display: none;
  }

  .logo {
    max-width: 20%;
  }

  /* .workbody {
    padding: 0px 100px 0px 100px;
  } */

  .columns{
    column-count: 2;
  }

}


@media only screen and (min-width: 90em) {

  .nav {
      padding-top: 50px;
      display: block;
  }

}

